[project]
name = "quantum-random"
version = "1.4.2"
description = "Quantum random numbers"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    { name = "Seto Balian", email = "seto.balian@gmail.com" }
]
maintainers = [
    { name = "Seto Balian", email = "seto.balian@gmail.com" }
]
keywords = ["quantum", "random", "statistics"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.7",
    "requests>=2.32.3",
    "xdg>=6.0.0",
]

[project.optional-dependencies]
numpy = [
    "numpy>=2.0.2",
    "randomgen>=2.1.1",
]

[dependency-groups]
dev = [
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "responses>=0.25.3",
    "mypy>=1.13.0",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "black>=24.10.0",
    "pip>=24.3.1",
]

[project.scripts]
qrandom-init = "qrandom._cli:main"

[project.urls]
Homepage = "https://github.com/sbalian/quantum-random"
Repository = "https://github.com/sbalian/quantum-random"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qrandom"]

[tool.pytest.ini_options]
addopts = "--verbose"
testpaths = "tests"

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
known_first_party = ["qrandom"]
