[project]
name = "quantum-random"
version = "1.4.2"
description = "Quantum random numbers"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    { name = "Seto Balian", email = "seto.balian@gmail.com" }
]
maintainers = [
    { name = "Seto Balian", email = "seto.balian@gmail.com" }
]
keywords = ["quantum", "random", "statistics"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.3",
    "typer>=0.13.1",
]

[project.optional-dependencies]
numpy = [
    "numpy>=2.0.2",
    "randomgen>=2.1.1",
]

[dependency-groups]
dev = [
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "responses>=0.25.3",
    "pyright>=1.1.389",
    "ruff>=0.8.0",
]
analysis = [
    "matplotlib>=3.9.2",
    "scipy>=1.13.1",
]

[project.scripts]
qrandom-init = "qrandom._cli:main"

[project.urls]
Homepage = "https://github.com/sbalian/quantum-random"
Repository = "https://github.com/sbalian/quantum-random"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qrandom"]

[tool.pyright]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["F", "E", "W", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["qrandom"]
