[project]
name = "quantum-random"
version = "1.5.1"
description = "Quantum random numbers"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    { name = "Seto Balian", email = "seto.balian@gmail.com" }
]
maintainers = [
    { name = "Seto Balian", email = "seto.balian@gmail.com" }
]
keywords = ["quantum", "random", "statistics"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "typer>=0.24.1",
]

[project.optional-dependencies]
numpy = [
    "numpy>=2.2.6",
    "randomgen>=2.3.0",
]

[dependency-groups]
dev = [
    "click>=8.3.1",
    "ipython>=8.38.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "randomgen>=2.3.0",
    "responses>=0.26.0",
    "ruff>=0.15.6",
    "scipy>=1.15.3",
    "ty>=0.0.23",
]

[project.scripts]
qrandom-init = "qrandom._cli:main"

[project.urls]
Homepage = "https://github.com/sbalian/quantum-random"
Repository = "https://github.com/sbalian/quantum-random"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qrandom"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["F", "E", "W", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["qrandom"]
